<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Cadastro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002">

        <TextView
            android:id="@+id/tituloCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cadastrar"
            android:textColor="#F44336"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/loginCadastrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="text" />

        <EditText
            android:id="@+id/idadeCadastrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/idade"
            android:inputType="number" />

        <EditText
            android:id="@+id/senhaCadastrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSalvarCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cadastar"
            android:textSize="20sp"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/btnVoltarCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:textSize="20sp"
            app:cornerRadius="5dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>