<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".telaPrincipal.CriaReview">

    <TextView
        android:id="@+id/tituloEdicaoReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="Editar Review"
        android:textSize="40sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelMandante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mandante*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/selecaoMandante"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:focusedByDefault="false"
                android:tooltipText="Mandante da partida"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelMandante" />

            <TextView
                android:id="@+id/labelVisitante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Visitante*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selecaoMandante" />

            <Spinner
                android:id="@+id/selecaoVisitante"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:focusedByDefault="true"
                android:tooltipText="Visitante da partida"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelVisitante" />

            <EditText
                android:id="@+id/placarMandante"
                android:layout_width="166dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:enabled="false"
                android:focusedByDefault="false"
                android:hint="@string/placar_mandante"
                android:inputType="numberSigned"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selecaoVisitante" />

            <EditText
                android:id="@+id/placarVisitante"
                android:layout_width="166dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:enabled="false"
                android:focusedByDefault="false"
                android:hint="@string/placar_visitante"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/placarMandante"
                app:layout_constraintTop_toBottomOf="@+id/selecaoVisitante" />

            <EditText
                android:id="@+id/dataJogo"
                android:layout_width="166dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:enabled="false"
                android:focusedByDefault="false"
                android:hint="@string/data_do_jogo"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placarMandante" />

            <EditText
                android:id="@+id/horaJogo"
                android:layout_width="166dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/hor_rio_do_jogo"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dataJogo"
                app:layout_constraintTop_toBottomOf="@+id/placarVisitante" />

            <RatingBar
                android:id="@+id/notaReviewEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:contextClickable="false"
                android:focusableInTouchMode="false"
                android:focusedByDefault="false"
                android:forceHasOverlappingRendering="false"
                android:longClickable="false"
                android:numStars="5"
                android:saveEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataJogo" />

            <TextView
                android:id="@+id/labelCompeticao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Competicão*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notaReviewEditar" />

            <Spinner
                android:id="@+id/selecaoCompeticao"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:tooltipText="Campeonato"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelCompeticao" />

            <TextView
                android:id="@+id/labelFase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Fase/Rodada*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selecaoCompeticao" />

            <Spinner
                android:id="@+id/selecaoFaseCompeticao"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:tooltipText="Fase/Rodada"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelFase" />

            <Spinner
                android:id="@+id/localAssistiuJogo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:tooltipText="Local onde o jogo foi assistido"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selecaoFaseCompeticao" />

            <EditText
                android:id="@+id/avaliacaoPartidaEscrita"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:focusedByDefault="false"
                android:gravity="start|top"
                android:hint="@string/sua_avalia_o_da_partida"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/localAssistiuJogo" />

            <Button
                android:id="@+id/btnCancelarAvaliacao"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/cancelar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avaliacaoPartidaEscrita" />

            <Button
                android:id="@+id/btnSalvarAvaliacao"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/salvar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avaliacaoPartidaEscrita" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>